k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cutm-portal
  labels:
    name: cutm-portal
